force-app/main/default/objects/Process_Assessment__c/Process_Assessment__c.object-meta.xml
<!--
================================================================================
  OBJECT: Process_Assessment__c
  DESCRIPTION: Multi-dimensional assessment scores for process evaluation
  
  AUTHOR: Dennis van Musschenbroek (DvM) - Cobra CRM B.V.
  CREATED: 2024-12-12
  VERSION: 1.0.0
  API VERSION: 62.0
  
  EXPLANATION:
  ============
  This object captures assessment scores for processes across multiple dimensions.
  Inspired by enterprise process assessment frameworks like Orbus iServer.
  
  ASSESSMENT DIMENSIONS:
  ======================
  1. Complexity Score (0-100)
     - Number of steps, gateways, exceptions
     - Integration complexity
     - Decision point count
  
  2. Maturity Score (0-100)
     - Based on CMMI levels
     - Documentation quality
     - Automation level
     - Continuous improvement
  
  3. Strategic Score (0-100)
     - Business criticality
     - Customer impact
     - Revenue contribution
     - Competitive advantage
  
  4. Risk Score (0-100)
     - Compliance requirements
     - Financial exposure
     - Operational risk
     - Reputation risk
  
  Multiple assessments can be created over time to track process evolution.
  
-->
<CustomObject>
    <description>Multi-dimensional assessment scores for process evaluation including complexity, maturity, strategic importance, and risk ratings.</description>
    <label>Process Assessment</label>
    <nameField>
        <displayFormat>ASSESS-{00000}</displayFormat>
        <label>Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>