force-app/main/default/objects/Process_Assessment__c/fields/Assessed_By__c.field-meta.xml
<CustomField>
    <fullName>Assessed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who performed this assessment.</description>
    <inlineHelpText>Who performed this assessment?</inlineHelpText>
    <label>Assessed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Process_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>