force-app/main/default/objects/Process_Assessment__c/fields/Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Date__c</fullName>
    <description>The date when this assessment was performed.</description>
    <inlineHelpText>When was this assessment performed?</inlineHelpText>
    <label>Assessment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>