force-app/main/default/objects/Process_Assessment__c/fields/Complexity_Score__c.field-meta.xml
<CustomField>
    <fullName>Complexity_Score__c</fullName>
    <description>Complexity assessment score (0-100). Higher scores indicate more complex processes with many steps, decision points, and exceptions.</description>
    <inlineHelpText>Rate process complexity from 0 (simple) to 100 (highly complex).</inlineHelpText>
    <label>Complexity Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>