force-app/main/default/objects/Process_Assessment__c/fields/Maturity_Score__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Score__c</fullName>
    <description>Maturity assessment score (0-100). Based on CMMI levels. Higher scores indicate well-documented, optimized, and continuously improved processes.</description>
    <inlineHelpText>Rate process maturity from 0 (ad-hoc) to 100 (optimized).</inlineHelpText>
    <label>Maturity Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>