force-app/main/default/objects/Process_Assessment__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Additional notes and justification for the assessment scores.</description>
    <inlineHelpText>Add notes explaining the rationale for the assessment scores.</inlineHelpText>
    <label>Assessment Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>