force-app/main/default/objects/Process_Assessment__c/fields/Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score__c</fullName>
    <description>Risk assessment score (0-100). Higher scores indicate processes with significant compliance, financial, or operational risk.</description>
    <inlineHelpText>Rate risk level from 0 (low risk) to 100 (high risk).</inlineHelpText>
    <label>Risk Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>