force-app/main/default/objects/Process_Assessment__c/fields/Strategic_Score__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Score__c</fullName>
    <description>Strategic importance score (0-100). Higher scores indicate processes critical to business objectives and competitive advantage.</description>
    <inlineHelpText>Rate strategic importance from 0 (operational) to 100 (mission-critical).</inlineHelpText>
    <label>Strategic Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>